# Float2024-Fix

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c  stepper.c  webserver.c
main/include/: config.h  pin_settings.h  stepper.h
main/web/: index.html
